feature: make a game winable and can lose